--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
   <!-- CONTACT SECTION-->
    <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@globalcoffeehouse.com</p>
-    <p>Phone: 000-000-0000</p>
-    <p>Location:Richmond,VA</p>
+
+        <form class="contact-form">
+
+            <label>Name</label>
+            <input type="text" required>
+
+            <label>Email</label>
+            <input type="email" required>
+
+            <label>Message</label>
+            <textarea rows="4" required></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
    </section>
  <div class="tagline-box">
    Enjoy handcrafted coffee with Global flavors
